--- a/style.css
+++ b/style.css
@@ -70,5 +70,7 @@ h1 {
 }
 #container {
     display: block;
-    width: 450px;
+    max-width: 450px;
+    border-left: 5px solid #fff;
+    border-right: 5px solid #fff;
 }
