--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h1 {
 }
 #container {
     display: block;
+    margin: 0 auto;
     max-width: 450px;
     border-left: 5px solid #fff;
     border-right: 5px solid #fff;
